[project]
name = "azure-ai-agentserver-langgraph"
dynamic = ["version", "readme"]
description = "LangGraph adapter for Azure AI Agent Server"
requires-python = ">=3.10"
authors = [
  { name = "Microsoft Corporation", email = "azpysdkhelp@microsoft.com" },
]
license = "MIT"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
keywords = ["azure", "azure sdk"]

dependencies = [
    "azure-ai-agentserver-core==1.0.0b9",
    "langchain>=1.0.3",
    "langchain-openai>=1.0.3",
    "langchain-azure-ai[opentelemetry]~=1.0.0",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project.urls]
repository = "https://github.com/Azure/azure-sdk-for-python"

[tool.setuptools.packages.find]
exclude = [
    "tests*",
    "samples*",
    "doc*",
    "azure",
    "azure.ai",
]

[tool.setuptools.dynamic]
version = { attr = "azure.ai.agentserver.langgraph._version.VERSION" }
readme = { file = ["README.md"], content-type = "text/markdown" }

[tool.setuptools.package-data]
pytyped = ["py.typed"]

[tool.ruff]
line-length = 120
target-version = "py311"
lint.select = ["E", "F", "B", "I"]   # E=pycodestyle errors, F=Pyflakes, B=bugbear, I=import sort
lint.ignore = []
fix = false

[tool.ruff.lint.isort]
known-first-party = ["azure.ai.agentserver.langgraph"]
combine-as-imports = true

[tool.azure-sdk-build]
breaking = false   # incompatible python version
pyright = false
verifytypes = false   # incompatible python version for -core
verify_keywords = false
#mindependency = false  # depends on -core package
#latestdependency = false
#whl = false
#depends = false
#pylint = false
whl_no_aio = false
