[project]
name = "azure-ai-agentserver"
dynamic = ["version", "readme"]
description = "Generic agent server for Azure AI with pluggable protocol heads"
requires-python = ">=3.10"
authors = [
  { name = "Microsoft Corporation", email = "azpysdkhelp@microsoft.com" },
]
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
keywords = ["azure", "azure sdk", "agent", "agentserver"]

dependencies = [
    "azure-core>=1.35.0",
    "starlette>=0.45.0",
    "hypercorn>=0.17.0",
    "jsonschema>=4.0.0",
]

[project.optional-dependencies]
tracing = [
    "opentelemetry-api>=1.20.0",
]
metrics = [
    "prometheus_client>=0.20.0",
]
logging = [
    "python-json-logger>=3.0.0",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project.urls]
repository = "https://github.com/Azure/azure-sdk-for-python"

[tool.setuptools.packages.find]
exclude = [
    "tests*",
    "samples*",
    "doc*",
    "azure",
    "azure.ai",
]

[tool.setuptools.dynamic]
version = { attr = "azure.ai.agentserver._version.VERSION" }
readme = { file = ["README.md"], content-type = "text/markdown" }

[tool.setuptools.package-data]
pytyped = ["py.typed"]

[tool.ruff]
line-length = 120
target-version = "py310"
lint.select = ["E", "F", "B", "I"]
lint.ignore = []
fix = false

[tool.ruff.lint.isort]
known-first-party = ["azure.ai.agentserver"]
combine-as-imports = true

[tool.azure-sdk-build]
breaking = false
mypy = true
pyright = true
verifytypes = true
pylint = true
type_check_samples = false  # samples require env-specific deps (langchain, agent-framework, etc.)
