[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "azure-agrifood-farming"
authors = [
  { name = "Microsoft Corporation", email = "azpysdkhelp@microsoft.com" },
]
description = "Microsoft Azure AgriFood Farming Client Library for Python"
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
requires-python = ">=3.6"
keywords = ["azure", "azure sdk"]

dependencies = [
    "azure-core<2.0.0,>=1.24.0",
    "msrest>=0.6.21",
]
dynamic = [
"version", "readme"
]

[project.urls]
repository = "https://github.com/Azure/azure-sdk-for-python"

[tool.setuptools.dynamic]
version = {attr = "azure.agrifood.farming._version.VERSION"}
readme = {file = ["README.md", "CHANGELOG.md"], content-type = "text/markdown"}

[tool.setuptools.packages.find]
exclude = [
    "tests*",
    "samples*",
    "azure",
    "azure.agrifood",
]

[tool.setuptools.package-data]
pytyped = ["py.typed"]

[tool.azure-sdk-build]
pyright = false
ci_enabled = false
