[build-system]
requires = [
    "setuptools>=77.0.3",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "azure-ai-agents"
authors = [
    { name = "Microsoft Corporation", email = "azpysdkhelp@microsoft.com" },
]
description = "Microsoft Corporation Azure AI Agents Client Library for Python"
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.9"
keywords = [
    "azure",
    "azure sdk",
]
dependencies = [
    "isodate>=0.6.1",
    "azure-core>=1.30.0",
    "typing-extensions>=4.6.0",
]
dynamic = [
    "version",
    "readme",
]

[project.urls]
repository = "https://github.com/Azure/azure-sdk-for-python/tree/main/sdk"

[tool.mypy]
python_version = "3.10"
exclude = []
warn_unused_configs = true
ignore_missing_imports = true
follow_imports_for_stubs = false

[tool.isort]
profile = "black"
line_length = 120
known_first_party = [
    "azure",
]
filter_files = true
extend_skip_glob = [
    "*/_vendor/*",
    "*/_generated/*",
    "*/_restclient/*",
    "*/doc/*",
    "*/.tox/*",
]

[tool.azure-sdk-build]
whl_no_aio = false

[tool.azure-sdk-conda]
in_bundle = false

[tool.setuptools.dynamic.version]
attr = "azure.ai.agents._version.VERSION"

[tool.setuptools.dynamic.readme]
file = [
    "README.md",
]
content-type = "text/markdown"

[tool.setuptools.packages.find]
exclude = [
    "samples",
    "samples.utils",
    "samples.agents_tools",
    "samples.agents_async",
    "samples.agents_multiagent",
    "samples.agents_streaming",
    "samples.agents_telemetry",
    "samples.assets",
    "samples.agents_async.utils",
    "tests",
    "azure",
    "azure.ai",
]

[tool.setuptools.package-data]
"azure.ai.agents" = [
    "py.typed",
]
