[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "azure-ai-voicelive"
authors = [{ name = "Microsoft Corporation", email = "azpysdkhelp@microsoft.com" }]
description = "Microsoft Corporation Azure AI VoiceLive Client Library for Python"
license = "MIT"
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.9"
keywords = ["azure", "azure sdk", "voice", "voicelive", "realtime", "websocket", "audio"]

dependencies = [
  "isodate>=0.6.1",
  "azure-core>=1.35.0",
  "typing-extensions>=4.6.0; python_version < '3.11'",
]

dynamic = ["version", "readme"]

[project.optional-dependencies]
aiohttp = ["aiohttp>=3.9.0,<4.0.0"]
websockets = ["websockets>=12.0,<14.0"]
all-websockets = [
  "aiohttp>=3.9.0,<4.0.0",
  "websockets>=12.0,<14.0",
]

test = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-rerunfailures>=13.0",
  "aiohttp>=3.9.0,<4.0.0",
  "websockets>=12.0,<14.0",
  "python-dotenv",
  "azure-identity",
  "soundfile",
  "pyaudio; platform_python_implementation == 'CPython' and python_version < '3.13'",
]

[project.urls]
Repository = "https://github.com/Azure/azure-sdk-for-python"

[tool.setuptools.dynamic]
version = { attr = "azure.ai.voicelive._version.VERSION" }
readme = { file = ["README.md", "CHANGELOG.md"], content-type = "text/markdown" }

[tool.setuptools.packages.find]
include = ["azure.ai.voicelive", "azure.ai.voicelive.*"]

[tool.setuptools.package-data]
"azure.ai.voicelive" = ["py.typed"]