[build-system]
requires = [
    "setuptools>=77.0.3",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "azure-ai-anomalydetector"
authors = [
    { name = "Microsoft Corporation", email = "azpysdkhelp@microsoft.com" },
]
description = "Microsoft Cognitive Services Anomaly Detector Client Library for Python"
license = "MIT"
classifiers = [
    "Development Status :: 7 - Inactive",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.7"
keywords = [
    "azure",
    "azure sdk",
]
dependencies = [
    "isodate<1.0.0,>=0.6.1",
    "azure-core<2.0.0,>=1.24.0",
    "typing-extensions>=4.3.0; python_version<'3.8.0'",
]
dynamic = [
    "version",
    "readme",
]

[project.urls]
repository = "https://github.com/Azure/azure-sdk-for-python/tree/main/sdk"

[tool.azure-sdk-build]
pylint = false
pyright = false
type_check_samples = false
verifytypes = false
ci_enabled = false

[tool.setuptools.dynamic.version]
attr = "azure.ai.anomalydetector._version.VERSION"

[tool.setuptools.dynamic.readme]
file = [
    "README.md",
]
content-type = "text/markdown"

[tool.setuptools.packages.find]
exclude = [
    "tests",
    "azure",
    "azure.ai",
]

[tool.setuptools.package-data]
pytyped = [
    "py.typed",
]

[packaging]
package_name = "azure-ai-anomalydetector"
package_nspkg = "azure-ai-nspkg"
package_pprint_name = "Cognitive Services Anomaly Detector"
package_doc_id = "cognitive-services"
is_stable = false
is_arm = false
need_msrestazure = false
auto_update = false
