[build-system]
requires = [
    "setuptools>=77.0.3",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "azure-appconfiguration-provider"
authors = [
    { name = "Microsoft Corporation", email = "azpysdkhelp@microsoft.com" },
]
description = "Microsoft App Configuration Provider Library for Python"
license = "MIT"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.6"
keywords = [
    "azure",
    "azure sdk",
]
dependencies = [
    "azure-core>=1.30.0",
    "azure-appconfiguration>=1.6.1",
    "azure-keyvault-secrets>=4.3.0",
    "dnspython>=2.6.1",
]
dynamic = [
    "version",
    "readme",
]

[project.urls]
repository = "https://github.com/Azure/azure-sdk-for-python/tree/main/sdk/appconfiguration/azure-appconfiguration-provider"

[tool.azure-sdk-build]
pyright = false
black = true

[tool.azure-sdk-conda]
in_bundle = false

[tool.setuptools.dynamic.version]
attr = "azure.appconfiguration.provider._version.VERSION"

[tool.setuptools.dynamic.readme]
file = [
    "README.md",
    "CHANGELOG.md",
]
content-type = "text/markdown"

[packaging]
package_name = "azure-appconfiguration-provider"
package_nspkg = "azure-data-nspkg"
package_pprint_name = "App Configuration Provider"
package_doc_id = ""
is_stable = false
is_arm = false
need_msrestazure = false
auto_update = false
