# --------------------------------------------------------------------------
# Copyright (c) Microsoft Corporation. All rights reserved.
# Licensed under the MIT License. See License.txt in the project root for license information.
# --------------------------------------------------------------------------

[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "azure-appconfiguration-provider"
authors = [
  { name = "Microsoft Corporation", email = "azpysdkhelp@microsoft.com" },
]
description = "Microsoft App Configuration Provider Library for Python"
license = "MIT"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.6"
keywords = [
    "azure",
    "azure sdk",
]
version = "2.4.1"
dependencies = [
    "azure-core>=1.30.0",
    "azure-appconfiguration>=1.8.0",
    "azure-keyvault-secrets>=4.3.0",
    "dnspython>=2.6.1",
]
dynamic = ["readme"]

[project.urls]
repository = "https://github.com/Azure/azure-sdk-for-python/tree/main/sdk/appconfiguration/azure-appconfiguration-provider"

[tool.setuptools.dynamic]
readme = {file = [
    "README.md",
    "CHANGELOG.md",
], content-type = "text/markdown"}

[tool.setuptools.packages.find]
exclude = [
    "azure",
    "azure.appconfiguration",
    "doc*",
    "generated_samples*",
    "generated_tests*",
    "samples*",
    "swagger*",
    "tests*",
]

[tool.setuptools.packages.find]
exclude = [
    "azure",
    "azure.appconfiguration",
    "samples",
    "tests",
    "tests.*",
]

[tool.azure-sdk-build]
pyright = false
black = true

[tool.azure-sdk-conda]
in_bundle = false
