[build-system]
requires = [
    "setuptools>=77.0.3",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "azure-appconfiguration"
authors = [
    { name = "Microsoft Corporation", email = "azpysdkhelp@microsoft.com" },
]
description = "Microsoft App Configuration Data Client Library for Python"
license = "MIT"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"
keywords = [
    "azure",
    "azure sdk",
]
dependencies = [
    "isodate>=0.6.1",
    "azure-core>=1.30.0",
    "typing-extensions>=4.6.0",
]
dynamic = [
    "version",
    "readme",
]

[project.urls]
repository = "https://github.com/Azure/azure-sdk-for-python/tree/main/sdk/appconfiguration/azure-appconfiguration"

[tool.azure-sdk-build]
pyright = false
black = true

[tool.azure-sdk-conda]
in_bundle = false

[tool.setuptools.dynamic.version]
attr = "azure.appconfiguration._version.VERSION"

[tool.setuptools.dynamic.readme]
file = [
    "README.md",
]
content-type = "text/markdown"

[tool.setuptools.packages.find]
exclude = [
    "tests",
    "azure",
]

[tool.setuptools.package-data]
"azure.appconfiguration" = [
    "py.typed",
]

[packaging]
package_name = "azure-data-appconfiguration"
package_nspkg = "azure-data-nspkg"
package_pprint_name = "App Configuration Data"
package_doc_id = ""
is_stable = false
is_arm = false
need_msrestazure = false
auto_update = false
